--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
     <section class="about_sec" id="about">
       <div class="im_common_container">
         <div class="about__wrapper">
-          <h6 class="im_title">About Us</h6>
-          <p class="im_body_txt">Inclusive Minds is a 360° political consulting firm aligned with the Indian National Congress. We offer electioneering, policy and governance advisory to support our clients. Our team comprises both seasoned political consultants who have contributed across the political spectrum from the inception of this space, and other professionals with varied expertise who joined us through the journey.</p>
-          <p class="im_body_txt">Our campaign initiatives include policy suggestions, grassroots campaigns, stakeholder alignment, high-octane narrative-defining events, social media amplification, and effective multi-media strategy and campaigns.</p>
-          <p class="im_body_txt">We aim to promote and facilitate constructive dialogue and interaction between young mission-driven professionals who want to revolutionise the field of electioneering, policy-making and governance advisory. We, also, aspire to collaborate with like-minded individuals to find common ground on the most important issues and elevate them into positions where they can affect real change.</p>
-          <p class="im_body_txt">We are headquartered in Hyderabad. </p>
+          <h6 class="im_title" data-aos="fade-up" data-aos-duration="600" data-aos-delay="400">About Us</h6>
+          <p class="im_body_txt" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">Inclusive Minds is a 360° political consulting firm aligned with the Indian National Congress. We offer electioneering, policy and governance advisory to support our clients. Our team comprises both seasoned political consultants who have contributed across the political spectrum from the inception of this space, and other professionals with varied expertise who joined us through the journey.</p>
+          <p class="im_body_txt" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">Our campaign initiatives include policy suggestions, grassroots campaigns, stakeholder alignment, high-octane narrative-defining events, social media amplification, and effective multi-media strategy and campaigns.</p>
+          <p class="im_body_txt" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">We aim to promote and facilitate constructive dialogue and interaction between young mission-driven professionals who want to revolutionise the field of electioneering, policy-making and governance advisory. We, also, aspire to collaborate with like-minded individuals to find common ground on the most important issues and elevate them into positions where they can affect real change.</p>
+          <p class="im_body_txt" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">We are headquartered in Hyderabad. </p>
         </div>
       </div>
     </section>
@@ -116,41 +116,41 @@
       <div class="im_common_container">
         <div class="work__wrapper">
           <div class="work__header">
-            <h6 class="im_title im_title-white">Our Work</h6>
-            <p class="im_body_txt im_body-white">We specialise in building data-driven 360-degree election campaigns, offer strategic advice to the client and support on-ground implementation of strategies. Inclusive Minds has six internal verticals that work together to deliver cutting-edge political consulting services to the INC.</p>
+            <h6 class="im_title im_title-white" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">Our Work</h6>
+            <p class="im_body_txt im_body-white" data-aos="fade-up" data-aos-duration="800" data-aos-delay="800">We specialise in building data-driven 360-degree election campaigns, offer strategic advice to the client and support on-ground implementation of strategies. Inclusive Minds has six internal verticals that work together to deliver cutting-edge political consulting services to the INC.</p>
           </div>
           <div class="works__list">
             <div class="works__list_wrapper">
               <div class="works__list_detail">
-                <div class="works__list_data">
+                <div class="works__list_data" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">
                   <h5 class="works__list_title im_title-white">DATA ANALYTICS</h5>
                   <p class="works__list_info im_body-white">The team builds models to identify and forecast voting patterns, tracks the performance of political leaders at all levels, and analyses media and social media trends for clients.</p>
                 </div>
-                <div class="works__list_data">
+                <div class="works__list_data" data-aos="fade-up" data-aos-duration="800" data-aos-delay="600">
                   <h5 class="works__list_title im_title-white">Growth and Performance Marketing</h5>
                   <p class="works__list_info im_body-white">The team identifies, develops and optimises marketing strategies and channels to drive organisational growth.</p>
                 </div>
               </div>
 
               <div class="works__list_detail">
-               <div class="works__list_data">
+               <div class="works__list_data" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">
                  <h5 class="works__list_title im_title-white">Political Strategy</h5>
                  <p class="works__list_info im_body-white">The ground intelligence team tracks the political pulse of the electorate. Through evidence-based research, the team proposes and shapes winning electoral strategies in collaboration with the client. 
                </p>
                </div>
-               <div class="works__list_data">
+               <div class="works__list_data" data-aos="fade-up" data-aos-duration="800" data-aos-delay="600">
                  <h5 class="works__list_title im_title-white">Strategic Research</h5>
                  <p class="works__list_info im_body-white">The research team analyses and tracks government performance, identifies policy and electoral issues and proposes sound recommendations using a mix of policy and political research methods.</p>
                </div>
              </div>
 
              <div class="works__list_detail">
-               <div class="works__list_data">
+               <div class="works__list_data" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">
                  <h5 class="works__list_title im_title-white">Communications</h5>
                  <p class="works__list_info im_body-white">The team creates and delivers high-impact content to disseminate and amplify client messaging across print and digital media platforms. The team is also responsible for analysing and interpreting important news across multiple platforms in order to develop clear actionables for clients.
                </p>
                </div>
-               <div class="works__list_data">
+               <div class="works__list_data" data-aos="fade-up" data-aos-duration="800" data-aos-delay="600">
                  <h5 class="works__list_title im_title-white">Campaigns and Operations</h5>
                  <p class="works__list_info im_body-white">The team creates integrated campaigns focused on strategic issues. It specialises in brand management and supports the end-to-end implementation of on-ground campaigns, including measuring outcomes.</p>
                </div>
@@ -161,11 +161,11 @@
         </div>
       </div>
     </section>
-    <section class="about_sec" id="about">
+    <section class="about_sec" id="join">
       <div class="im_common_container">
         <div class="about__wrapper">
-          <h6 class="im_title">Join us</h6>
-          <p class="im_body_txt">We are passionate about our democracy and the politics that shape the world around us. We draw on some of the sharpest minds from distinguished institutions and diverse professional backgrounds to help us achieve our goal. The team brings in decades of experience in building electoral strategies that spark conversations, effect change and help shape electoral and legislative ecosystems in our country.</p>
+          <h6 class="im_title" data-aos="fade-up" data-aos-duration="500" data-aos-delay="300">Join us</h6>
+          <p class="im_body_txt" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">We are passionate about our democracy and the politics that shape the world around us. We draw on some of the sharpest minds from distinguished institutions and diverse professional backgrounds to help us achieve our goal. The team brings in decades of experience in building electoral strategies that spark conversations, effect change and help shape electoral and legislative ecosystems in our country.</p>
         </div>
       </div>
     </section>
