--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <nav>
           <div class="navbar im_common_container">
             <div class="navbar__logo">
+              <a href="index.html">
               <img src="images/logomind.png" alt="logo" />
+              </a>
             </div>
             <div class="navbar__links">
               <div class="navmenu-toggle">
@@ -38,7 +40,7 @@
                   <a href="#">Our Work</a>
                 </li>
                 <li>
-                  <a href="#">Nehru Fellowship</a>
+                  <a href="fellowship.html">Nehru Fellowship</a>
                 </li>
                 <li>
                   <a href="#join">Join Us</a>
@@ -49,21 +51,6 @@
         </nav>
       </header>
     </section>
-    <!-- Banner Section -->
-    <!-- <section class="banner_section">
-      <div class="banner_video">
-        <video loop autoplay muted class="dktp_video">
-          <source src="images/movie.mp4" type="video/mp4"> Your browser does not support the video tag.
-        </video>
-        <video loop autoplay muted class="mobile_video">
-          <source src="images/mb-movie.mp4" type="video/mp4"> Your browser does not support the video tag.
-        </video>
-      </div>
-      <div class="banner_content">
-        <p class="info_light">Join India’s best</p><p class="info_strong">POLITICAL CONSULTING TEAM</p>
-        <button class="btn_apply"><a href="https://forms.gle/XJMzwUzXCeCiW3rb7" target="_blank">APPLY NOW</a></button>
-      </div>
-    </section> -->
     <section class="carosel">
       <main>
   
@@ -77,8 +64,10 @@
                 
                 <div class="carousel-inner">
                    <div class="carousel-item active">
+                    <a href="fellowship.html">
                       <img class="img-fluid img-dktp" src="images/slide1.jpg" alt="">
                       <img class="img-fluid img-mb" src="images/slide1-mb.jpg" alt="">
+                    </a>
                    </div><!-- /end carosel-item -->
                    <div class="carousel-item">
                  <img class="img-fluid img-dktp" src="images/slide2.jpg" alt="">
