--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                   <a href="#about">About Us</a>
                 </li>
                 <li>
-                  <a href="#">Our Work</a>
+                  <a href="#work">Our Work</a>
                 </li>
                 <li>
                   <a href="fellowship.html">Nehru Fellowship</a>
