--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                   <a href="#work">Our Work</a>
                 </li>
                 <li>
-                  <a href="fellowship.html">Nehru Fellowship</a>
+                  <a href="#">Nehru Fellowship</a>
                 </li>
                 <li>
                   <a href="#join">Join Us</a>
@@ -64,7 +64,7 @@
                 
                 <div class="carousel-inner">
                    <div class="carousel-item active">
-                    <a href="fellowship.html">
+                    <a href="#">
                       <img class="img-fluid img-dktp" src="images/slide1.jpg" alt="">
                       <img class="img-fluid img-mb" src="images/slide1-mb.jpg" alt="">
                     </a>
