--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                </p>
                </div>
                <div class="works__list_data" data-aos="fade-up" data-aos-duration="800" data-aos-delay="600">
-                 <h5 class="works__list_title im_title-white">Campaigns and Operations</h5>
+                 <h5 class="works__list_title works__list_title-big im_title-white">Campaigns and Operations</h5>
                  <p class="works__list_info im_body-white">The team creates integrated campaigns focused on strategic issues. It specialises in brand management and supports the end-to-end implementation of on-ground campaigns, including measuring outcomes.</p>
                </div>
              </div>
