--- a/fellowship.html
+++ b/fellowship.html
@@ -124,7 +124,7 @@
     <section class="process_sec" id="process">
       <div class="im_common_container">
         <div class="process_wrapper">
-        <h6 class="im_title fellow_im_title" data-aos="fade-up" data-aos-duration="500" data-aos-delay="300">What to expect?</h6>
+        <h6 class="im_title fellow_im_title" data-aos="fade-up" data-aos-duration="500" data-aos-delay="300">What to expect</h6>
         <p class="im_body_txt" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">Fellows, over a period of 12 months, will get hands-on exposure by doing a rotational stint in different functions of a political consulting firm, including campaigns, research, political strategy and communications.</p>
         <p class="im_body_txt" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">The Fellowship will start with a two-week training program. After the training, Fellows will spend six months working in three different functions (two months per function). Following that, Fellows will spend the remaining six months specialising in one functional area of their choice. At the end of the Fellowship, Fellows would have gained a deeper understanding of how a political party approaches elections and developed key skills required to ideate, operationalise and manage an election campaign.</p>
       </div>
@@ -135,7 +135,7 @@
     <section class="process_sec" id="process">
       <div class="im_common_container">
         <div class="process_wrapper">
-        <h6 class="im_title fellow_im_title" data-aos="fade-up" data-aos-duration="500" data-aos-delay="300">What to expect?</h6>
+        <h6 class="im_title fellow_im_title" data-aos="fade-up" data-aos-duration="500" data-aos-delay="300">Remuneration</h6>
         <p class="im_body_txt im_body_txt-bold" data-aos="fade-up" data-aos-duration="300" data-aos-delay="200">Fellows will receive a monthly stipend of Rs. 75,000.</p>
       </div>
     </div>
