list item added

--- a/fellowship.html
+++ b/fellowship.html
@@ -90,10 +90,10 @@
         <h6 class="im_title fellow_im_title" data-aos="fade-up" data-aos-duration="500" data-aos-delay="300">Who can apply?</h6>
         <p class="im_body_txt" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">The overarching aim of the Fellowship is to provide a platform for young Indians to participate in the design and execution of election campaigns.</p>
         <p class="im_body_txt im_body_txt-bold" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">Applicants should meet the following criteria:</p>
-        <p class="im_body_txt" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">
-          Must hold a Bachelor's Degree in any discipline.
-          Must be below 30 years of age (born after 03. 09. 1993 ). 
-          Must be an Indian citizen.</p>
+        <ul class="im_ul_txt" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">
+          <li class="im_li_txt">Must hold a Bachelor's Degree in any discipline.</li>
+          <li class="im_li_txt">Must be below 30 years of age (born after 03. 09. 1993 ).</li> 
+          <li class="im_li_txt">Must be an Indian citizen.</li></ul>
       </div>
     </div>
     </section>
