large screen image added

--- a/index.html
+++ b/index.html
@@ -63,12 +63,14 @@
                   <div class="carousel-inner">
                      <div class="carousel-item active">
                         <a href="fellowship.html">
+                        <img class="img-fluid img-lg" src="images/slide1-lg.jpg" alt="">
                         <img class="img-fluid img-dktp" src="images/slide1.jpg" alt="">
                         <img class="img-fluid img-mb" src="images/slide1-mb.jpg" alt="">
                         </a>
                      </div>
                      <!-- /end carosel-item -->
                      <div class="carousel-item">
+                        <img class="img-fluid img-lg" src="images/slide2-lg.jpg" alt="">
                         <img class="img-fluid img-dktp" src="images/slide2.jpg" alt="">
                         <img class="img-fluid img-mb" src="images/slide2-mb.jpg" alt="">
                      </div>
