--- a/fellowship.html
+++ b/fellowship.html
@@ -26,7 +26,7 @@
                 <img src="images/logomind.png" alt="logo" />
               </a>
             </div>
-            <!-- <div class="navbar__links"><div class="navmenu-toggle"><div class="bar1"></div><div class="bar2"></div><div class="bar3"></div></div><ul class="nav_menu_ul"><li><a href="#about">About Us</a></li><li><a href="#">Our Work</a></li><li><a href="fellowship.html">Nehru Fellowship</a></li><li><a href="#join">Join Us</a></li></ul></div> -->
+            <div class="navbar__links"><div class="navmenu-toggle"><div class="bar1"></div><div class="bar2"></div><div class="bar3"></div></div><ul class="nav_menu_ul"><li><a href="index.html#about">About Us</a></li><li><a href="index.html#work">Our Work</a></li><li><a href="fellowship.html">Nehru Fellowship</a></li><li><a href="index.html#join">Join Us</a></li></ul></div>
           </div>
         </nav>
       </header>
@@ -38,6 +38,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <a href="https://forms.gle/33un8QVJv63sXRLHA" target="_blank">
+                  <img class="img-fluid img-lg" src="images/banner-lg.jpg" alt="">
                   <img class="img-fluid img-dktp" src="images/banner.jpg" alt="">
                   <img class="img-fluid img-mb" src="images/banner-mb.jpg" alt="">
                 </a>
