--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                            <a href="#work">Our Work</a>
                         </li>
                         <li>
-                           <a href="fellowship.html">Nehru Fellowship</a>
+                           <a href="nehru-fellowship.html">Nehru Fellowship</a>
                         </li>
                         <li>
                            <a href="#join">Join Us</a>
@@ -62,7 +62,7 @@
                   <!-- /end ol -->
                   <div class="carousel-inner">
                      <div class="carousel-item active">
-                        <a href="fellowship.html">
+                        <a href="nehru-fellowship.html">
                         <img class="img-fluid img-lg" src="images/slide1-lg.jpg" alt="">
                         <img class="img-fluid img-dktp" src="images/slide1.jpg" alt="">
                         <img class="img-fluid img-mb" src="images/slide1-mb.jpg" alt="">
@@ -154,6 +154,9 @@
             <div class="about__wrapper">
                <h6 class="im_title" data-aos="fade-up" data-aos-duration="500" data-aos-delay="300">Join us</h6>
                <p class="im_body_txt" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">We are passionate about our democracy and the politics that shape the world around us. We draw on some of the sharpest minds from distinguished institutions and diverse professional backgrounds to help us achieve our goal. The team brings in decades of experience in building electoral strategies that spark conversations, effect change and help shape electoral and legislative ecosystems in our country.</p>
+               <div class="join_btn_conatiner">
+                <button class="btn_fellow" data-aos="fade-up" data-aos-duration="600" data-aos-delay="500"><a href="https://forms.gle/33un8QVJv63sXRLHA" target="_blank">Apply now for Nehru Fellowship</a></button>
+            </div>
             </div>
          </div>
       </section>
